# arch-labs

./: README  README.md
1/classwork/1/: for.c
1/classwork/2/: Makefile
1/classwork/3/: Makefile
1/homework/: 1.c  Makefile
1/homework/include/: matrix.h
1/homework/source/: minmax.h  multiplication.h
2/cuda/: Makefile  matadd.cu  matprod.cu  vecadd.cu
2/homework/: 2.c  Makefile
2/mpi/: Makefile  baton.c  each.c  hello.c  master.c  results.awk  shift.c  sort.c
assignment/: CMakeLists.txt  main.c
assignment/include/: utils.h
assignment/source/: CMakeLists.txt  minmax.h  multiplication.h  pattern.h  vector.h
assignments/: CMakeLists.txt  matrix.h  minmax.c  multiplication.c  pattern.c  utils.h  vector.c
class_1/: Makefile  directives.c  hello.c
class_2/: integration.c
class_3/: collision.c
classwork/1/: data.c
classwork/3/: dynamic.c
